# ctx-zip-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
ctxzip/: __init__.py  compact.py
ctxzip/storage/: grep.py  known_keys.py  resolver.py
ctxzip/strategies/: __init__.py  write_tool_results.py
ctxzip/tools/: __init__.py  grep.py
ctxzippy/adapters/: __init__.py  base.py  filesystem.py  s3.py
ctxzippy/storage/: __init__.py  resolver.py
ctxzippy/tools/: reader.py
examples/: README.md  openai_e2e.py  requirements.txt  s3_example.py
tests/: __init__.py  test_adapters.py  test_compactor.py  test_s3_adapter.py  test_tools.py
